[package]
edition = "2021"
name = "dht-experiments"
publish = false
version = "0.1.0"

[dependencies]
crc = "1"
rand = "0.8"
reqwest = "0.11.11"
serde = {version = "1", features = ["derive"]}
serde_bencode = "0.2"
serde_bytes = "0.11"
tokio = {version = "1", features = ["macros", "net", "rt-multi-thread"]}
turbosql = {git = "https://github.com/trevyn/turbosql"}
