[package]
edition = "2021"
name = "dht-experiments"
publish = false
version = "0.1.0"

[dependencies]
bincode = "1"
crc = "3"
futures = "0.3"
hex = "0.4"
log = "0.4"
pretty_env_logger = "0.4"
rand = "0.8"
reqwest = "0.11.11"
serde = {version = "1", features = ["derive"]}
serde_bencode = "0.2"
serde_bytes = "0.11"
tokio = {version = "1", features = ["macros", "net", "rt-multi-thread"]}
turbosql = {git = "https://github.com/trevyn/turbosql"}
