[package]
edition = "2021"
name = "dht-experiments"
publish = false
version = "0.1.0"

[dependencies]
async-stream = {git = "https://github.com/tokio-rs/async-stream"}
bincode = {git = "https://github.com/bincode-org/bincode", branch = "trunk"}
clap = {version = "4", features = ["derive"]}
crc = "3"
futures = "0.3"
hex = "0.4"
log = "0.4"
once_cell = "1"
pretty_env_logger = "0.4"
rand = "0.8"
reqwest = "0.11.11"
serde = {version = "1", features = ["derive"]}
serde_bencode = "0.2"
serde_bytes = "0.11"
serde_json = "1"
sha1 = "0.10"
tokio = {version = "1", features = ["macros", "net", "rt-multi-thread"]}
tracked = "0.5"
turbomod = "0.1"
turbosql = {git = "https://github.com/trevyn/turbosql"}
